--- a/général.css
+++ b/général.css
@@ -2,19 +2,40 @@
     background-color: black;
     color: white;
     display: grid;
-    grid-template-columns: 1fr 3fr 3fr 3fr 1fr;
+    grid-template-columns: 3fr 3fr 1fr 3fr 3fr 3fr;
+}
+div ul{
+    list-style: none;
 }
 
 #FooterPremièrePartie{
-    grid-column: 2/2;
+    grid-column: 2;
+    font-size: 16px;
 }
 
 #FooterDeuxièmePartie{
-    grid-column: 3/3;
+    grid-column: 4;
 }
 
-#FooterDeuxièmePartie{
-    grid-column: 4/4;
+.FooterLienGras{
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+}
+
+.FooterLienBasique{
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+#FooterTroisièmePartie{
+    grid-column: 5;
 }
 
 #button_info {
@@ -25,4 +46,11 @@
     font-size: 15px;
     margin: 3px 1px;
     cursor: pointer;
+}
+
+#button_info:hover{
+    background-color: rgba(255, 255, 255, 0.651);
+}
+#button_info:active{
+    box-shadow: -10px -10px 30px ; 
 }
