--- a/général.css
+++ b/général.css
@@ -1,30 +1,36 @@
-#Footer{
+footer{
     background-color: black;
     color: white;
     display: grid;
     grid-template-columns: 3fr 3fr 1fr 3fr 3fr 3fr;
+    grid-template-rows: 3fr 1fr;
+    padding-top: 20px;
 }
 div ul{
     list-style: none;
 }
 
-#FooterPremièrePartie{
+#footerPremierePartie{
     grid-column: 2;
     font-size: 16px;
+    justify-self: center;
+    align-self: start;
 }
 
-#FooterDeuxièmePartie{
+#footerDeuxiemePartie{
     grid-column: 4;
+    justify-self: center;
+    align-self: start;
 }
 
-.FooterLienGras{
+.footerLienGras{
     text-decoration: none;
     font-weight: bold;
     font-size: 20px;
     color: white;
 }
 
-.FooterLienBasique{
+.footerLienBasique{
     text-decoration: none;
     color: white;
     font-size: 18px;
@@ -34,11 +40,20 @@ a:hover{
     text-decoration: underline;
 }
 
-#FooterTroisièmePartie{
+#footerTroisiemePartie{
     grid-column: 5;
+    justify-self: center;
+    align-self: center;
 }
 
-#button_info {
+.icon{
+    width: 2vw;
+}
+.icon:hover{
+    filter: brightness(70%);
+}
+
+#boutonInfo {
     background-color: white;
     color: black;
     padding: 10px 20px;
@@ -48,9 +63,28 @@ a:hover{
     cursor: pointer;
 }
 
-#button_info:hover{
-    background-color: rgba(255, 255, 255, 0.651);
+#boutonInfo:hover{ 
+    filter: brightness(70%);
 }
-#button_info:active{
+#boutonInfo:active{
     box-shadow: -10px -10px 30px ; 
+}
+
+#footerQuatriemePartie{
+    grid-column: 2/6;
+    grid-row: 2;
+    place-self: center;
+}
+
+.footerLienPetit{
+    text-decoration: none;
+    font-size: 14px;    
+    color: white;
+    margin: 20px;
+}
+
+#liste{
+    display: flex;
+    border-top: 1px solid white;
+    padding: 20px;
 }
