--- a/CSS/accueil.css
+++ b/CSS/accueil.css
@@ -2,6 +2,11 @@ video {
     width: 100%;
 }
 
-main .titre-oeuvre {
-    font-weight: bold;
+main {
+    text-align: center;
+    padding: 5rem 10rem;
+}
+
+main button {
+    margin-top: 3rem;
 }
