--- a/CSS/general.css
+++ b/CSS/general.css
@@ -7,10 +7,15 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: 'Century Gothic', 'Helvetica', 'Arial', sans-serif;
 }
 
 body {
     background-color: var(--fond);
+}
+
+main {
+    padding: 3rem 5rem;
 }
 
 button {
@@ -47,7 +52,7 @@ footer{
     display: grid;
     grid-template-columns: 3fr 3fr 1fr 3fr 3fr 3fr;
     grid-template-rows: 3fr 1fr;
-    padding-top: 20px;
+    padding-top: 2rem;
 }
 
 footer div ul{
