--- a/CSS/collection.css
+++ b/CSS/collection.css
@@ -5,29 +5,31 @@ main {
     justify-content: center;
 }
 
-main .apercu-oeuvre {
-    margin: 1em;
-}
-
 main #apercu-oeuvre-template {
     display: none;
 }
 
-main .apercu-oeuvre .calque-apercu-oeuvre{
-    background-color: none;
-    transition: all 0.5s ease;
-}
-
-main .apercu-oeuvre .calque-apercu-oeuvre:hover {
-    background-color: rgba(240, 255, 255, 0.288);
-    transition: all 0.5s ease;
-}
-
-
 main .apercu-oeuvre {
+    margin: 1em;
+    height: fit-content;
     width: 300px;
+    padding: .5rem;
+}
+
+main .apercu-oeuvre:hover {
+    box-shadow: 0px 0px 10px 5px rgb(165, 165, 165);
+    transition: all 0.5s ease;
 }
 
 main .apercu-oeuvre img {
     width: 300px;
+}
+
+main .apercu-oeuvre h1 {
+    font-size: 1.2em;
+}
+
+main .apercu-oeuvre h2 {
+    font-size: 1em;
+    font-weight: normal;
 }
