--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,4 +1,28 @@
-main h2 {
-    padding-top: 2rem;
-    padding-bottom: .5rem;
+#titre{
+    text-align: left;
+    position: relative;
+    background-color: black;
+    color: white;
+    padding: 2em;
+}
+
+main{
+    text-align: left;
+    padding-left: 20vw;
+    padding-right: 20vw;
+    padding-bottom: 5vh;
+}
+
+h2{
+    padding-top:5rem;
+    padding-bottom: 2rem;
+    text-align: center;
+}
+
+ul{
+    list-style-type: none;
+}
+
+li{
+    padding-top: 1rem;
 }
