--- a/CSS/accueil.css
+++ b/CSS/accueil.css
@@ -4,12 +4,13 @@ video {
 
 main {
     text-align: center;
-    justify-content: center;
-    padding: 5rem 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 main .bouton {
-    margin-top: 5rem;
+    margin: 4rem 0rem 1rem 0rem;
     width: 15rem;
 }
 
