--- a/CSS/general.css
+++ b/CSS/general.css
@@ -165,16 +165,16 @@ footer #liste{
 
 /******************************************** Loader ********************************************/
 
-#loader {
+/* #loader {
     border: 16px solid var(--fond); /* Light grey */
-    border-top: 16px solid black; /* Blue */
-    border-radius: 50%;
+    /* border-top: 16px solid black; Blue */
+    /* border-radius: 50%;
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
-  }
+  } */ 
   
-  @keyframes spin {
+  /* @keyframes spin {
     0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+    100% { transform: rotate(360deg); } */
+  /* } */
