--- a/CSS/general.css
+++ b/CSS/general.css
@@ -49,28 +49,45 @@ a:hover, footer a:hover {
     text-decoration: underline;
 }
 
-ul{
+ul {
     list-style-type: none;
 }
 
 /******************************************** Header ********************************************/
 
-nav{
+header nav {
     background-color: black;
-    padding: 2rem;
+    border-bottom: solid 2px black;
 }
 
-nav ul{
+header nav ul {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
 
-header a{
+header nav ul li {
+    padding: 2rem;
+}
+
+header nav ul li:hover {
+    background-color: var(--fond);
+}
+
+header nav ul li:hover a {
+    color: black;
+    text-decoration: none;
+}
+
+header a {
     text-decoration: none;
     color: white;
     font-size: 16px;
 }
+/* 
+header a:hover {
+    text-decoration: none;
+} */
 
 /******************************************** Footer ********************************************/
 
