--- a/CSS/general.css
+++ b/CSS/general.css
@@ -66,7 +66,7 @@ header nav ul {
 }
 
 header nav ul li {
-    padding: 2rem;
+    padding: 3rem;
 }
 
 header nav ul li:hover {
@@ -82,6 +82,23 @@ header a {
     text-decoration: none;
     color: white;
     font-size: 16px;
+}
+
+header #logoBretcho {
+    width: 7rem;
+    margin: .5rem;
+    position: absolute;
+    z-index: 10;
+}
+
+@media screen and (max-width: 800px) {
+    #logoBretcho {
+        display: none;
+    }
+
+    header nav ul li {
+        padding: 2rem;
+    }
 }
 
 /******************************************** Footer ********************************************/
