--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,8 +1,6 @@
 main {
     text-align: left;
-    padding-left: 20vw;
-    padding-right: 20vw;
-    padding-bottom: 5vh;
+    padding: 0vw 20vw 5vw 20vw;
 }
 
 main h1 {
@@ -13,4 +11,10 @@ main h1 {
 
 main li {
     padding-top: 1rem;
+}
+
+@media screen and (max-width: 1000px) {
+    main {
+        padding: 0vw 10vw 5vw 10vw;
+    }
 }
