--- a/CSS/accueil.css
+++ b/CSS/accueil.css
@@ -11,8 +11,7 @@ main {
 
 main .bouton {
     margin: 4rem 0rem 1rem 0rem;
-    width: 15rem;
-    margin: auto;
+    width: auto;
     margin-top: 3rem;
 }
 
