--- a/CSS/general.css
+++ b/CSS/general.css
@@ -61,19 +61,21 @@ header nav {
 
 header nav ul {
     display: flex;
+    align-items: center;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
 header nav ul li {
-    padding: 3rem;
+    padding: 2rem;
 }
 
-header nav ul li:hover {
+header nav ul .menu:hover {
     background-color: var(--fond);
 }
 
-header nav ul li:hover a {
+header nav ul .menu:hover a {
     color: black;
     text-decoration: none;
 }
@@ -85,30 +87,19 @@ header a {
 }
 
 header #logoBretcho {
-    width: 7rem;
-    margin: .5rem;
-    position: absolute;
-    z-index: 10;
-}
-
-@media screen and (max-width: 800px) {
-    #logoBretcho {
-        display: none;
-    }
-
-    header nav ul li {
-        padding: 2rem;
-    }
+    width: 9rem;
 }
 
 /******************************************** Footer ********************************************/
+section {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
 
 footer {
     background-color: black;
     color: white;
-    display: grid;
-    grid-template-columns: 3fr 3fr 1fr 3fr 3fr 3fr;
-    grid-template-rows: 3fr 1fr;
     padding-top: 20px;
     width: 100%;
 }
@@ -117,17 +108,16 @@ footer div ul {
     list-style: none;
 }
 
-footer #footerPremierePartie {
-    grid-column: 2;
-    font-size: 16px;
-    justify-self: center;
-    align-self: start;
+footer #footerPremiereLigne {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-footer #footerDeuxiemePartie {
-    grid-column: 4;
-    justify-self: center;
-    align-self: start;
+footer #footerPremierePartie {
+    font-size: 16px;
+    display: flex;
 }
 
 footer .footerLienGras {
@@ -144,9 +134,7 @@ footer .footerLienBasique {
 }
 
 footer #footerTroisiemePartie {
-    grid-column: 5;
-    justify-self: center;
-    align-self: center;
+    margin: 20px 1px;
 }
 
 footer .icon {
@@ -174,10 +162,11 @@ footer #boutonInfo:active {
     box-shadow: 0px 0px 30px ; 
 }
 
-footer #footerQuatriemePartie {
-    grid-column: 2/6;
-    grid-row: 2;
-    place-self: center;
+footer #footerDeuxiemeLigne {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 footer .footerLienPetit {
@@ -189,9 +178,47 @@ footer .footerLienPetit {
 
 footer #liste {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     border-top: 1px solid white;
     padding: 20px;
     margin-top: 15px;
+}
+
+@media screen and (max-width: 550px) {
+    footer #liste {
+      flex-direction: column;
+      justify-content: flex-start;
+    }
+
+    footer #footerPremiereLigne {
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+    }
+
+    footer #footerTroisiemePartie ul{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    footer #footerTroisiemePartie img{
+        margin: 0vw 3vw;
+    }
+
+    footer #footerPremierePartie {
+    align-items: center;
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+
+    header nav ul li{
+        padding: 2vw;
+    }
+
 }
 
 /******************************************** Loader ********************************************/
