--- a/CSS/oeuvre.css
+++ b/CSS/oeuvre.css
@@ -8,13 +8,13 @@ main {
 
 main #conteneurLoader {
     width: max-content;
-    padding-left: 10%;
 }
 
 main #informations {
     text-align: left;
     float: right;
     padding: 3rem;
+    display: none;
 }
 
 main img {
@@ -23,11 +23,12 @@ main img {
     max-width: 25rem;
 }
 
-main{
+main {
     display: flex;
     align-items: center;
     justify-content: center;
- }
+}
+
 main #divConteneur {
     width: max-content;
     padding-left: 42%;
